Glitches in UI drawing #80327

Closed
opened 2020-09-01 15:58:06 +02:00 by Eric Klein · 60 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.77

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-01 07:02, hash: c78c425266
Worked: (newest version of Blender that worked as expected)

Short description of error
Shader Editor has psychedelic graphics background. It changes pattern as you zoom in/out.

AwildLaserLightShowAppeared.mkv
ShaderEditor.jpg

Exact steps for others to reproduce the error

  1. Start Blender.
  2. Open "Shader Editor".
  3. Observe the psychedelic graphics background.
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.77 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-01 07:02, hash: `c78c425266` Worked: (newest version of Blender that worked as expected) **Short description of error** Shader Editor has psychedelic graphics background. It changes pattern as you zoom in/out. [AwildLaserLightShowAppeared.mkv](https://archive.blender.org/developer/F8831688/AwildLaserLightShowAppeared.mkv) ![ShaderEditor.jpg](https://archive.blender.org/developer/F8829841/ShaderEditor.jpg) **Exact steps for others to reproduce the error** 1. Start Blender. 2. Open "Shader Editor". 3. Observe the psychedelic graphics background.
Author

Added subscriber: @eklein

Added subscriber: @eklein

blender/blender-addons#80668 was marked as duplicate of this issue

blender/blender-addons#80668 was marked as duplicate of this issue

#80629 was marked as duplicate of this issue

#80629 was marked as duplicate of this issue

#80655 was marked as duplicate of this issue

#80655 was marked as duplicate of this issue

#80619 was marked as duplicate of this issue

#80619 was marked as duplicate of this issue

#80439 was marked as duplicate of this issue

#80439 was marked as duplicate of this issue

#80606 was marked as duplicate of this issue

#80606 was marked as duplicate of this issue

#80567 was marked as duplicate of this issue

#80567 was marked as duplicate of this issue

#80563 was marked as duplicate of this issue

#80563 was marked as duplicate of this issue

#80521 was marked as duplicate of this issue

#80521 was marked as duplicate of this issue

#80489 was marked as duplicate of this issue

#80489 was marked as duplicate of this issue

#80451 was marked as duplicate of this issue

#80451 was marked as duplicate of this issue

#80367 was marked as duplicate of this issue

#80367 was marked as duplicate of this issue

#80350 was marked as duplicate of this issue

#80350 was marked as duplicate of this issue

#80427 was marked as duplicate of this issue

#80427 was marked as duplicate of this issue

#80361 was marked as duplicate of this issue

#80361 was marked as duplicate of this issue

Added subscribers: @mrlemonyfresh, @Raimund58, @georgK

Added subscribers: @mrlemonyfresh, @Raimund58, @georgK

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can confirm with c78c425266 but not in latest master. Please check if this is resolved in next daily build.

Can confirm with c78c425266 but not in latest master. Please check if this is resolved in next daily build.
Member

Added subscriber: @ZsoltStefan

Added subscriber: @ZsoltStefan

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Actually I am still able to reproduce in d2c52d4de2, though this happens only sometimes.
Untitled.png
I thought this was resolved, but it looks like reproducibility is not 100%

Actually I am still able to reproduce in d2c52d4de2, though this happens only sometimes. ![Untitled.png](https://archive.blender.org/developer/F8837698/Untitled.png) I thought this was resolved, but it looks like reproducibility is not 100%

Added subscribers: @EMMERKS-3D, @lichtwerk

Added subscribers: @EMMERKS-3D, @lichtwerk

Added subscribers: @chr.schmitz, @2046411367, @manzanilla

Added subscribers: @chr.schmitz, @2046411367, @manzanilla
Richard Antalik changed title from Shader Editor psychedelic graphics background to Glitches in UI drawing 2020-09-04 00:10:46 +02:00
Member

Added subscriber: @Eavin

Added subscriber: @Eavin

Added subscriber: @deadpin

Added subscriber: @deadpin

Same issue here:
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-04 02:27, hash: 92b8d7019b

Same issue here: Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-04 02:27, hash: `92b8d7019b`

Added subscriber: @bent

Added subscriber: @bent

Similar issue in the preferences > editing menu for me

Windows 10 1909
GeForce GTX 970

Similar issue in the preferences > editing menu for me Windows 10 1909 GeForce GTX 970
Member

Added subscriber: @ChrisGraz

Added subscriber: @ChrisGraz

Added subscriber: @johjakob-3

Added subscriber: @johjakob-3

I can reproduce this issue on macOS too.

macOS Catalina 10.15.6
AMD Radeon Pro 560

Edit: I am not able to reproduce the bug on cf0ba59e31 (2020-09-04 23:27) anymore.

I can reproduce this issue on macOS too. macOS Catalina 10.15.6 AMD Radeon Pro 560 **Edit**: I am not able to reproduce the bug on [cf0ba59e31](https://developer.blender.org/rBcf0ba59e311b) (2020-09-04 23:27) anymore.
Member

Added subscribers: @slowboy, @oweissbarth

Added subscribers: @slowboy, @oweissbarth

I can confirm that this does not always happen, the glitch appears about every second time I start Blender.

A probably related issue, in the builds with this bug, the following also happens: the icons of the active tools disappear, and the splash screen when starting Blender is empty.
You can see the missing icons on this screenshot too:

In #80327#1008760, @iss wrote:
Actually I am still able to reproduce in d2c52d4de2, though this happens only sometimes.
Untitled.png
I thought this was resolved, but it looks like reproducibility is not 100%

I can confirm that this does not always happen, the glitch appears about every second time I start Blender. A probably related issue, in the builds with this bug, the following also happens: the icons of the active tools disappear, and the splash screen when starting Blender is empty. You can see the missing icons on this screenshot too: > In #80327#1008760, @iss wrote: > Actually I am still able to reproduce in d2c52d4de2, though this happens only sometimes. > ![Untitled.png](https://archive.blender.org/developer/F8837698/Untitled.png) > I thought this was resolved, but it looks like reproducibility is not 100%

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Added subscriber: @ditos

Added subscriber: @ditos

Same here.
This error only appears after a restart (until now) when starting Blender for the first time.

Win 10 - 20H2 - Build 19042.488
Blender 2.91.0 Alpha September 07, 09:47:58- b351607996
GTX1070 - Nvidia Studio Driver 452.06
No third party addons or startup-,userpref.blend

colorful-bug.mp4

Same here. This error only appears after a restart (until now) when starting Blender for the first time. Win 10 - 20H2 - Build 19042.488 Blender 2.91.0 Alpha September 07, 09:47:58- b351607996e4 GTX1070 - Nvidia Studio Driver 452.06 No third party addons or startup-,userpref.blend [colorful-bug.mp4](https://archive.blender.org/developer/F8850633/colorful-bug.mp4)

Added subscriber: @Frozen_Death_Knight

Added subscriber: @Frozen_Death_Knight

Added subscriber: @Maxiiiii

Added subscriber: @Maxiiiii

Added subscriber: @petrikas.m

Added subscriber: @petrikas.m
Contributor

Added subscriber: @AlexanderWilms

Added subscriber: @AlexanderWilms
Member

Added subscribers: @Lteng, @grosgood

Added subscribers: @Lteng, @grosgood

Added subscribers: @ErickNyanduKabongo, @tiles, @Znio.G

Added subscribers: @ErickNyanduKabongo, @tiles, @Znio.G
Member

Added subscriber: @3di

Added subscriber: @3di

System Information
Operating system: Darwin-20.1.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-16.0.42

Blender Version
Version: 2.91.0 Alpha, branch: master, commit date: 2020-09-09 17:32, hash: 92fc32e48d

I just compiled Blender (full). The problem seems to be solved.

**System Information** Operating system: Darwin-20.1.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-16.0.42 **Blender Version** Version: 2.91.0 Alpha, branch: master, commit date: 2020-09-09 17:32, hash: `92fc32e48d` I just compiled Blender (full). The problem seems to be solved.

Removed subscriber: @Maxiiiii

Removed subscriber: @Maxiiiii

Added subscriber: @heini

Added subscriber: @heini
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Member

I also think this might have been fixed since I can't reproduce it anymore

I also think this might have been fixed since I can't reproduce it anymore

Added subscriber: @AFWS

Added subscriber: @AFWS

This doesn’t seem fixed. I got the same weird colors in properties with hash: 0721fbb6e1. The next restart didn’t have the issue though.

This doesn’t seem fixed. I got the same weird colors in properties with hash: 0721fbb6e1. The next restart didn’t have the issue though.
Member

You are right, confirmed... the tell seems to be if Blender starts with no splash screen, there's gonna be trouble.

image.png

You are right, confirmed... the tell seems to be if Blender starts with no splash screen, there's gonna be trouble. ![image.png](https://archive.blender.org/developer/F8860642/image.png)
Member

Added subscribers: @peticel, @TheRedWaxPolice

Added subscribers: @peticel, @TheRedWaxPolice

I haven't had it in the side panels for a while, but it occurs every time I open the file browser with thumbnail view activated
thought it was the graphics driverat first because it disappeared for a while after updating (gtx 1060) but now it is back

glitch.mp4

I haven't had it in the side panels for a while, but it occurs every time I open the file browser with thumbnail view activated thought it was the graphics driverat first because it disappeared for a while after updating (gtx 1060) but now it is back [glitch.mp4](https://archive.blender.org/developer/F8861911/glitch.mp4)

Added subscriber: @fclem

Added subscriber: @fclem
Clément Foucault self-assigned this 2020-09-10 17:32:17 +02:00

Painfully bisected to 1804eb57fd

Painfully bisected to 1804eb57fd

Added subscriber: @Warcos

Added subscriber: @Warcos

This issue was referenced by 8ff397b3b1

This issue was referenced by 8ff397b3b1a95a8fa69752d4c0cdc95f2b3daadd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
22 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80327
No description provided.