Fix T80327 UI: Glitches in UI drawing

This was caused by an uninitialized variable that was left
unchanged when calling GPU_vertformat_clear.